--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#F1EDEA"
     tools:context=".DetailActivity">
 
     <TextView
@@ -57,7 +58,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Tahun"
-                android:textSize="20sp"
+                android:textColor="#787775"
+                android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/judul_tv"/>
@@ -68,8 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="27dp"
                 android:text="Rating"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:textSize="11sp"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/tahun_tv"/>
 
@@ -79,8 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:text="Genre"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:textSize="11sp"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/rating"/>
 
@@ -90,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="27dp"
                 android:text="Synopsis"
-                android:textSize="20sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/genre_tv"/>
@@ -101,8 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="Lorem ipsum"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:textSize="11sp"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/synopsis_tv"/>
 
@@ -112,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="27dp"
                 android:text="Trailer"
-                android:textSize="20sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/synopsis_content_tv"/>
@@ -123,8 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="Lorem ipsum"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:textSize="11sp"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/trailer_tv"/>
 
@@ -134,7 +132,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="27dp"
                 android:text="Release date"
-                android:textSize="20sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/trailer_content_tv"/>
@@ -145,8 +143,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="Lorem Ipsum"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:textSize="11sp"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/release_tv"/>
 
@@ -156,7 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="27dp"
                 android:text="Director"
-                android:textSize="20sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/release_content_tv"/>
@@ -167,8 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="Lorem Ipsum"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:textSize="11sp"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintTop_toBottomOf="@+id/director_tv"/>
 
