--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:backgroundTint="#F1EDEA"
     app:cardElevation="0dp"
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -9,7 +10,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="22dp"
+        android:layout_marginBottom="4dp"
         android:orientation="vertical">
 
         <ImageView
@@ -23,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Judul"
+            android:textStyle="bold"
             android:textSize="12sp"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="5dp"
@@ -32,10 +34,11 @@
             android:id="@+id/tahun_movie"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="tahun"
+            android:textColor="#787775"
+            android:text="Tahun"
+            android:textStyle="bold"
             android:textSize="10sp"
             android:layout_marginLeft="5dp"/>
-
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
