--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:backgroundTint="#F1EDEA"
+    android:backgroundTint="@color/background"
     app:cardElevation="0dp"
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
