--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#F1EDEA"
+    android:layout_height="match_parent"
+    android:background="@color/background"
     android:visibility="visible"
     tools:context=".MainActivity">
 
@@ -16,7 +16,7 @@
         android:fontFamily="@font/irishgrover"
         android:textStyle="bold"
         android:padding="16dp"
-        android:text="MyVie"
+        android:text="@string/header"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="37dp"
-                android:text="Search"
+                android:text="@string/search"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/icon_iv"
                 app:layout_constraintStart_toStartOf="@id/recyclerView"
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:paddingTop="22dp"
-                android:text="Home"
+                android:text="@string/home"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/recyclerView"
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:paddingTop="22dp"
-                android:text="Favorite"
+                android:text="@string/favorite"
                 android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="@+id/home_tv"
                 app:layout_constraintStart_toEndOf="@+id/home_tv"/>
