--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,10 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.UTS_LAB" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/darkBackgroundColor</item>
+        <item name="android:backgroundTint">@color/darkBackgroundColor</item>
+
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
