--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#F1EDEA</color>
     <color name="url">#1E90FF</color>
+    <color name="darkBackgroundColor">#121212</color>
+
 </resources>
