--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="background">#F1EDEA</color>
     <color name="url">#1E90FF</color>
     <color name="darkBackgroundColor">#121212</color>
+    <color name="grey">#D9D9D9</color>
 
 </resources>
